// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FieldDefs > boolean 1`] = `
{
  "autoIncrement": false,
  "columnType": "integer",
  "default": {
    "_id": "Option",
    "_tag": "None",
  },
  "nullable": false,
  "primaryKey": false,
  "schema": {
    "ast": "Boolean",
    "decodedAst": "Boolean",
    "encodedAst": "Union",
  },
}
`;

exports[`FieldDefs > boolean 2`] = `
{
  "autoIncrement": false,
  "columnType": "integer",
  "default": {
    "_id": "Option",
    "_tag": "None",
  },
  "nullable": false,
  "primaryKey": false,
  "schema": {
    "ast": "Boolean",
    "decodedAst": "Boolean",
    "encodedAst": "Union",
  },
}
`;

exports[`FieldDefs > boolean 3`] = `
{
  "autoIncrement": false,
  "columnType": "integer",
  "default": {
    "_id": "Option",
    "_tag": "Some",
    "value": false,
  },
  "nullable": false,
  "primaryKey": false,
  "schema": {
    "ast": "Boolean",
    "decodedAst": "Boolean",
    "encodedAst": "Union",
  },
}
`;

exports[`FieldDefs > datetime 1`] = `
{
  "autoIncrement": false,
  "columnType": "text",
  "default": {
    "_id": "Option",
    "_tag": "None",
  },
  "nullable": false,
  "primaryKey": false,
  "schema": {
    "ast": "Declaration",
    "decodedAst": "Declaration",
    "encodedAst": "String",
  },
}
`;

exports[`FieldDefs > datetime 2`] = `
{
  "autoIncrement": false,
  "columnType": "text",
  "default": {
    "_id": "Option",
    "_tag": "None",
  },
  "nullable": false,
  "primaryKey": false,
  "schema": {
    "ast": "Declaration",
    "decodedAst": "Declaration",
    "encodedAst": "String",
  },
}
`;

exports[`FieldDefs > datetime 3`] = `
{
  "autoIncrement": false,
  "columnType": "text",
  "default": {
    "_id": "Option",
    "_tag": "Some",
    "value": null,
  },
  "nullable": true,
  "primaryKey": false,
  "schema": {
    "ast": "Union",
    "decodedAst": "Union",
    "encodedAst": "Union",
  },
}
`;

exports[`FieldDefs > datetime 4`] = `
{
  "autoIncrement": false,
  "columnType": "text",
  "default": {
    "_id": "Option",
    "_tag": "Some",
    "value": 2022-02-02T00:00:00.000Z,
  },
  "nullable": false,
  "primaryKey": false,
  "schema": {
    "ast": "Declaration",
    "decodedAst": "Declaration",
    "encodedAst": "String",
  },
}
`;

exports[`FieldDefs > json 1`] = `
{
  "autoIncrement": false,
  "columnType": "text",
  "default": {
    "_id": "Option",
    "_tag": "None",
  },
  "nullable": false,
  "primaryKey": false,
  "schema": {
    "ast": "Any",
    "decodedAst": "Any",
    "encodedAst": "String",
  },
}
`;

exports[`FieldDefs > json 2`] = `
{
  "autoIncrement": false,
  "columnType": "text",
  "default": {
    "_id": "Option",
    "_tag": "Some",
    "value": null,
  },
  "nullable": true,
  "primaryKey": false,
  "schema": {
    "ast": "Union",
    "decodedAst": "Union",
    "encodedAst": "Union",
  },
}
`;

exports[`FieldDefs > json 3`] = `
{
  "autoIncrement": false,
  "columnType": "text",
  "default": {
    "_id": "Option",
    "_tag": "Some",
    "value": {
      "name": "Bob",
    },
  },
  "nullable": true,
  "primaryKey": false,
  "schema": {
    "ast": "Union",
    "decodedAst": "Union",
    "encodedAst": "Union",
  },
}
`;

exports[`FieldDefs > text 1`] = `
{
  "autoIncrement": false,
  "columnType": "text",
  "default": {
    "_id": "Option",
    "_tag": "None",
  },
  "nullable": false,
  "primaryKey": false,
  "schema": {
    "ast": "String",
    "decodedAst": "String",
    "encodedAst": "String",
  },
}
`;

exports[`FieldDefs > text 2`] = `
{
  "autoIncrement": false,
  "columnType": "text",
  "default": {
    "_id": "Option",
    "_tag": "None",
  },
  "nullable": false,
  "primaryKey": false,
  "schema": {
    "ast": "String",
    "decodedAst": "String",
    "encodedAst": "String",
  },
}
`;

exports[`FieldDefs > text 3`] = `
{
  "autoIncrement": false,
  "columnType": "text",
  "default": {
    "_id": "Option",
    "_tag": "Some",
    "value": null,
  },
  "nullable": true,
  "primaryKey": false,
  "schema": {
    "ast": "Union",
    "decodedAst": "Union",
    "encodedAst": "Union",
  },
}
`;

exports[`FieldDefs > text 4`] = `
{
  "autoIncrement": false,
  "columnType": "text",
  "default": {
    "_id": "Option",
    "_tag": "Some",
    "value": "foo",
  },
  "nullable": true,
  "primaryKey": false,
  "schema": {
    "ast": "Union",
    "decodedAst": "Union",
    "encodedAst": "Union",
  },
}
`;

exports[`FieldDefs > text 5`] = `
{
  "autoIncrement": false,
  "columnType": "text",
  "default": {
    "_id": "Option",
    "_tag": "Some",
    "value": "foo",
  },
  "nullable": true,
  "primaryKey": false,
  "schema": {
    "ast": "Union",
    "decodedAst": "Union",
    "encodedAst": "Union",
  },
}
`;
